# tt_darcazaa_monorepo

./: LICENSE  README.md  dev_services.sh  docker-compose.yml  init_services.sh  start_docker_services_debian.sh  start_services.sh  tt.code-workspace  update_services.sh
app/: LICENSE  README.md  build.gradle  settings.gradle
app/app/: build.gradle
app/app/src/androidTest/java/mx/ipn/upiiz/darcazaa/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/mx/ipn/upiiz/darcazaa/utils/: MapUtils.kt  RoutineUtils.kt  StringUtils.kt
app/app/src/main/java/mx/ipn/upiiz/darcazaa/view_models/: DriverViewModel.kt  (+4 more)
app/app/src/main/res/raw/: dark_map_style.json  light_map_style.json
app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/test/java/mx/ipn/upiiz/darcazaa/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
drone/: .env.example  .gitignore  Dockerfile  Makefile  poetry.toml  pyproject.toml  requirements.txt  run.sh
drone/drone/: app.py  companion_vehicle.py  constants.py  ground_station.py  landing_assistant.py
mavlink_controller_server/: .env  .env.example  .gitignore  Dockerfile  Justfile  Makefile  poetry.toml  pyproject.toml  requirements.txt
mavlink_controller_server/src/: __init__.py  app.py  constants.py  drone_com.py  mavlink.py
mavlink_controller_server/src/models/: __init__.py  lat_lng.py  message.py  mission_status.py
server/: .env.example  .gitignore  Dockerfile  Dockerfile.save  package-lock.json  package.json  tsconfig.json  wpa_supplicant.conf
server/prisma/: dev.db-journal  schema.prisma
server/prisma/migrations/20220422043213_initial/: migration.sql
server/src/: app.ts  constants.ts  db.ts  server.ts  utils.ts
server/src/controllers/: base.controller.ts  history.controller.ts
server/src/faker/: index.ts
server/src/models/: message.ts  message_type.ts  mission_status.ts  routine.ts  syncing_status.ts  system_status.ts  waypoint.ts
server/src/providers/: db.provider.ts
server/src/services/: history.service.ts  mission.service.ts
server/src/socket_services/: camera.socket_service.ts  routines.socket_service.ts
server/src/utils/: array.utils.ts
(+48 files in other folders)
