[tool.poetry]
name = "drone"
version = "0.1.0"
description = ""
authors = ["Ramiro Estrada Garcia <ramiroestradag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
