[tool.poetry]
name = "drone"
version = "0.1.0"
description = ""
authors = ["Ramiro Estrada Garcia <ramiroestradag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pymavlink = "^2.4.29"
pyserial = "^3.5"
dronekit = "^2.9.2"
playsound = "^1.3.0"
lxml = "4.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
